[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/player_weapon_fires/KunaiWeaponFire.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/player_weapon_fires/kunai/kunai.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.5, 4 )

[node name="KunaiWeaponFire" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 2 )

[node name="LifespanTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2( 0.5, 0 )
shape = SubResource( 3 )

[connection signal="timeout" from="LifespanTimer" to="." method="_on_LifespanTimer_timeout"]
[connection signal="body_entered" from="HurtArea" to="." method="_on_HurtArea_body_entered"]
